# bbmenu

./: .gitignore  BBmenu.c  BBmenu.h  BBmenuPrivate.h  CMakeLists.txt  DigitizerQUSBControl.pro  QUSB_HPTDC.uic  README.md  hptdc_init.uic  main.c  menu.uic
example/: CMakeLists.txt  cmd_list_menu.c  cmd_list_menu.h  main.c
inc/: BBmenu.h  BBmenuDefs.h  HPTDC_menu.h  QuickUSB.h  QuickUSB_menu.h  main.h  parameters.h
src/: BBmenu.c  HPTDC_menu.c  QuickUSB_menu.c  main.c
